2019-03-13 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix lost signal handling in conversion tab (fixes search, popup menu, delete icon, etc.)

2019-03-11 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Ask if the user wants the change the default behaviour and allow multiple instances

2019-03-04 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Layout fixes when formatting "= approx. 'a'"

2019-03-02 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Two's complement for hexadecimal

2019-02-28 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Option to ignore system language
	* Show data object properties message in separate dialog

2019-02-26 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Improved sorting of text string with unicode chars
	* Hide unit and constant suffixes in result

2019-02-17 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Replace decimal with exact decimal rational numbers when exact mode is activated using button

2019-02-16 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Replacement approximation dropdown menu with exact toggle button
	* Interval calculation method selection (use variance formula for interval calculation by default)

2019-02-09 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Enable show ending zeroes by default

2019-02-03 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix convert button

2019-01-10 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Support UTC+/-hh[:mm] and CET time zone conversion (using "to")

2019-01-06 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Nicer display of physical unit relation constant names in completion list

2018-12-02 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix "gtk_tree_view_scroll_to_cell: assertion 'tree_view->priv->tree != NULL' failed"

2018-11-16 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Reduce result text size to avoid horizontal scrolling

2018-11-10 Hanna Knutsson <hanna.knutsson@protonmail.com>
