@@ -2853,8 +2853,8 @@ On: 1.1 * 1.1 ≈ 1.2</property>
                             <property name="use_underline">True</property>
                           </object>
                         </child>
-                        <accelerator key="K" signal="activate" modifiers="GDK_CONTROL_MASK"/>
                         <accelerator key="k" signal="activate" modifiers="GDK_MOD1_MASK"/>
+                        <accelerator key="K" signal="activate" modifiers="GDK_CONTROL_MASK"/>
                       </object>
                       <packing>
                         <property name="expand">False</property>
@@ -2878,8 +2878,8 @@ On: 1.1 * 1.1 ≈ 1.2</property>
                             <property name="use_underline">True</property>
                           </object>
                         </child>
-                        <accelerator key="H" signal="activate" modifiers="GDK_CONTROL_MASK"/>
                         <accelerator key="h" signal="activate" modifiers="GDK_MOD1_MASK"/>
+                        <accelerator key="H" signal="activate" modifiers="GDK_CONTROL_MASK"/>
                       </object>
                       <packing>
                         <property name="expand">False</property>
@@ -2904,8 +2904,8 @@ On: 1.1 * 1.1 ≈ 1.2</property>
                             <property name="use_underline">True</property>
                           </object>
                         </child>
-                        <accelerator key="o" signal="activate" modifiers="GDK_CONTROL_MASK"/>
                         <accelerator key="o" signal="activate" modifiers="GDK_MOD1_MASK"/>
+                        <accelerator key="o" signal="activate" modifiers="GDK_CONTROL_MASK"/>
                       </object>
                       <packing>
                         <property name="expand">True</property>
@@ -3734,7 +3734,6 @@ On: 1.1 * 1.1 ≈ 1.2</property>
                                         <property name="focus_on_click">False</property>
                                         <property name="receives_default">True</property>
                                         <property name="popup">menu_fx</property>
-                                        <signal name="toggled" handler="on_mb_fx_toggled" swapped="no"/>
                                         <child>
                                           <placeholder/>
                                         </child>
@@ -3841,7 +3840,6 @@ On: 1.1 * 1.1 ≈ 1.2</property>
                                         <property name="focus_on_click">False</property>
                                         <property name="receives_default">True</property>
                                         <property name="popup">menu_pi</property>
-                                        <signal name="toggled" handler="on_mb_pi_toggled" swapped="no"/>
                                         <child>
                                           <placeholder/>
                                         </child>
@@ -3949,7 +3947,6 @@ On: 1.1 * 1.1 ≈ 1.2</property>
                                         <property name="focus_on_click">False</property>
                                         <property name="receives_default">True</property>
                                         <property name="popup">menu_sto</property>
-                                        <signal name="toggled" handler="on_mb_sto_toggled" swapped="no"/>
                                         <child>
                                           <placeholder/>
                                         </child>
@@ -4111,7 +4108,6 @@ On: 1.1 * 1.1 ≈ 1.2</property>
                                         <property name="focus_on_click">False</property>
                                         <property name="receives_default">True</property>
                                         <property name="popup">menu_units</property>
-                                        <signal name="toggled" handler="on_mb_units_toggled" swapped="no"/>
                                         <child>
                                           <placeholder/>
                                         </child>
@@ -4220,7 +4216,7 @@ On: 1.1 * 1.1 ≈ 1.2</property>
                                         <property name="focus_on_click">False</property>
                                         <property name="receives_default">True</property>
                                         <property name="popup">menu_to</property>
-                                        <signal name="toggled" handler="on_mb_to_toggled" swapped="no"/>
+                                        <signal name="button-release-event" handler="on_mb_to_button_release_event" swapped="no"/>
                                         <child>
                                           <placeholder/>
                                         </child>
