@@ -1,3 +1,7 @@
+2019-03-25 Hanna Knutsson <hanna.knutsson@protonmail.com>
+
+	* Fix dynamically updated button menus with gtk ~3.24.7
+
 2019-03-13 Hanna Knutsson <hanna.knutsson@protonmail.com>
 
 	* Fix lost signal handling in conversion tab (fixes search, popup menu, delete icon, etc.)
